deployments/k8s/workloads/base/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: http
      port: 8083
      targetPort: http
      protocol: TCP
  sessionAffinity: None
